Se agrega pagina de mujer y de hombre y se cambia index

--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -15,86 +15,82 @@
 
 <body>
     <header class="hombres-header">
-        <div class="oscureser-fondo">
-            <div class="index-header-flex">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0">
-                    <div class="container-fluid ">
-                        <a class="navbar-brand" href="/index.html">KAZEOVER</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
+        <div class="index-header-flex">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0">
+                <div class="container-fluid ">
+                    <a class="navbar-brand" href="/index.html">KAZEOVER</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
 
-                            <div>
-                                <span class="navbar-toggler-icon"></span>
-                            </div>
-                        </button>
-
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./pages/hombre.html">Hombre</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./pages/mujer.html">Mujer</a>
-                                </li>
-                                <ul class="navbar-nav mb-2 mb-lg-0">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="./img/nav-icon-busqueda.png"> <i
-                                                class="bi bi-search fs-5"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </ul>
-
+                        <div>
+                            <span class="navbar-toggler-icon"></span>
                         </div>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="./hombre.html">Hombre</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./mujer.html">Mujer</a>
+                            </li>
+                            <ul class="navbar-nav mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./img/nav-icon-busqueda.png"> <i
+                                            class="bi bi-search fs-5"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </ul>
+
                     </div>
-                </nav>
+            </nav>
     </header>
 
- <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
-    <main class="index-main m-0 p-0 ontainer-fluid">
-        <h2 class="nuestrasremeras-index-h2 bg-danger-subtle">Nuestras remeras</h2>
+    <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
+    <main class="index-main m-0 p-0 ">
+        <h2 class="nuestrasremeras-index-h2">MEN</h2>
 
         <div class=" row ultimos-oversize-contenedor"><!-- Contenedor de los productos -->
 
             <!-- PRIMERA CARD -->
-            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded">
-                <div class="remeraindex w-100">
+            <div class="col-6 col-md-3  p-0 m-0 rounded">
+                <div class="remeraindex w-100 ">
                     <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
-                        <button class="btn-remera-index w-50">COMPRAR</button>
+                        <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
 
             <!-- SEGUNDA CARD -->
-            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+            <div class="col-6 col-md-3  p-0 m-0 rounded ">
                 <div class="remeraindex w-100 h-100">
                     <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                           <h3 class="mt-2">DRACULA</h3>
+                        <h3 class="mt-2">DRACULA</h3>
                         <p>OVERSIZE COMODIDA </p>
                         <p>$30</p>
-                        <button class="btn-remera-index">COMPRAR</button>
                     </div>
                 </div>
             </div>
 
             <!-- TERCERA CARD -->
-            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+            <div class="col-6 col-md-3  p-0 rounded ">
                 <div class="remeraindex ">
                     <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
                             alt="remeranegra"></div>
@@ -103,13 +99,13 @@
                         <h3 class="mt-2">DRACULA</h3>
                         <p>OVERSIZE COMODIDA </p>
                         <p>$30</p>
-                        <button class="btn-remera-index">COMPRAR</button>
+
                     </div>
                 </div>
             </div>
 
-                          <!-- CUARTA CARD -->
-            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+            <!-- CUARTA CARD -->
+            <div class="col-6 col-md-3  p-0 rounded ">
                 <div class="remeraindex ">
                     <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
                             alt="remeranegra"></div>
@@ -118,83 +114,12 @@
                         <h3 class="mt-2">DRACULA</h3>
                         <p>OVERSIZE COMODIDA </p>
                         <p>$30</p>
-                        <button class="btn-remera-index">COMPRAR</button>
                     </div>
                 </div>
             </div>
 
-             <!-- 5ta CARD -->
-               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion m-3">
-                          <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
-             <!-- 6ta CARD -->
-               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion m-3">
-                          <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
-             <!-- 7ta CARD -->
-               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion m-3">
-                         <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
-             <!-- 8ta CARD -->
-               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion m-3">
-                          <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
-             <!-- 9ta CARD -->
-               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion m-3">
-                          <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
-             <!-- 10ma CARD -->
-               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+            <!-- 5ta CARD -->
+            <div class="col-6 col-md-3  p-0 rounded ">
                 <div class="remeraindex ">
                     <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
                             alt="remeranegra"></div>
@@ -203,7 +128,71 @@
                         <h3 class="mt-2">DRACULA</h3>
                         <p>OVERSIZE COMODIDA </p>
                         <p>$30</p>
-                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+            <!-- 6ta CARD -->
+            <div class="col-6 col-md-3  p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                    </div>
+                </div>
+            </div>
+            <!-- 7ta CARD -->
+            <div class="col-6 col-md-3  p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                    </div>
+                </div>
+            </div>
+            <!-- 8ta CARD -->
+            <div class="col-6 col-md-3  p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                    </div>
+                </div>
+            </div>
+            <!-- 9ta CARD -->
+            <div class="col-6 col-md-3 p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                    </div>
+                </div>
+            </div>
+            <!-- 10ma CARD -->
+            <div class="col-6 col-md-3 p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
                     </div>
                 </div>
             </div>
@@ -211,23 +200,18 @@
     </main>
 
 
+    <footer class=" text-start pt-3 w-100">
 
-    <footer class="footerindex text-start pt-3 w-100">
-
-        <div class="footer-conteiner-grid ps-4">
+        <div class="footer-conteiner-grid p-0 m-0">
             <div class="div1">
-                <ul class="footerindex flex-column align-items-stretch w-100">
+                <ul class=" flex-column align-items-stretch w-100">
                     <li>Ayuda</li>
                     <li>Mi cuenta</li>
                     <li>Store Locator</li>
+                    <li>Store Locator </li>
+                    <li>Gift Card </li>
                 </ul>
             </div>
-
-            <div class="div2">
-
-            </div>
-            <div class="div3">Store Locator </div>
-            <div class="div4">Gift Card</div>
         </div>
 
         <div class="footer-redessociales m-0">
@@ -255,7 +239,7 @@
     </footer>
 
 
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
 </body>
