--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="index-header">
         <div class="index-header-flex ">
 
-            <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0 position-relative z-1">
                 <div class="container-fluid ">
                     <a class="navbar-brand" href="index.html">KAZEOVER</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -58,7 +58,7 @@
             </nav>
         </div>
 
-       
+
         </div>
 
 
@@ -66,67 +66,61 @@
 
     <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
 
-    <main class="index-main m-0 p-0">
-
-            <div id="carouselExampleIndicators" class="carousel slide>
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner ">
-                    <div class="carousel-item active">
-                        <img src="./img/carrusel1index.jpg" class="carrusel-foto-index" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/carrusel2index.jpg" class="carrusel-foto-index" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/carussel3index.jpg" class="carrusel-foto-index" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+    <main class="m-0 p-0">
+        <div id="carouselExampleIndicators" class="carousel slide position-relative z-0">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
             </div>
-
-        <div class=" contenedor-main-carrosel ">
-            <div><img src="./img/carrusel4index.jpg" alt="" class="w-50"></div>
-            <div><img src="./img/carrusel5index.jpg" alt="" class="w-50"></div>
-        
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/carrusel1index.jpg" class="carrusel-foto-index" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/carrusel2index.jpg" class="carrusel-foto-index" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/carussel3index.jpg" class="carrusel-foto-index" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
 
-        </main>
+        <div class="d-flex justify-content-center">
+            <div class="w-50"><img src="./img/carrusel4index.jpg" alt="" class="carrusel-foto-index-main"></div>
+            <div class="w-50"><img src="./img/carrusel5index.jpg" alt="" class="carrusel-foto-index-main"></div>
+        </div>
+
+    </main>
 
 
 
     <!-- FOOTER DE INDEX -->
-    <footer class="footerindex text-start pt-3 w-100">
+    <footer class=" text-start pt-3 w-100">
 
-        <div class="footer-conteiner-grid ps-4">
+        <div class="footer-conteiner-grid p-0 m-0">
             <div class="div1">
-                <ul class="footerindex flex-column align-items-stretch w-100">
+                <ul class=" flex-column align-items-stretch w-100">
                     <li>Ayuda</li>
                     <li>Mi cuenta</li>
                     <li>Store Locator</li>
+                    <li>Store Locator </li>
+                    <li>Gift Card </li>
                 </ul>
             </div>
-
-            <div class="div2">
-
-            </div>
-            <div class="div3">Store Locator </div>
-            <div class="div4">Gift Card</div>
         </div>
 
         <div class="footer-redessociales m-0">
