--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -71,9 +71,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                         <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -85,9 +85,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -99,9 +99,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                         <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
 
                     </div>
                 </div>
@@ -114,9 +114,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -128,9 +128,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                         <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -141,9 +141,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -154,9 +154,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                         <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -167,9 +167,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -180,9 +180,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -193,9 +193,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
