--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -82,9 +82,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -96,9 +96,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
 
                     </div>
                 </div>
@@ -111,9 +111,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -125,9 +125,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -138,9 +138,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -151,9 +151,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -164,9 +164,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -177,9 +177,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
@@ -190,9 +190,9 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
+                          <h3 class="m-0 p-0">DRACULA</h3>
+                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
+                        <p class="">$30</p>
                     </div>
                 </div>
             </div>
