--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="index-header">
         <div class="index-header-flex ">
 
-            <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0 position-relative z-1">
+            <nav class="navbar navbar-expand-lg w-100 position-relative top-0 z-2">
                 <div class="container-fluid ">
                     <a class="navbar-brand" href="index.html">KAZEOVER</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -66,8 +66,20 @@
 
     <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
 
-    <main class="m-0 p-0">
-        <div id="carouselExampleIndicators" class="carousel slide position-relative z-0">
+    <main class="">
+        <div class="video-background">
+            <video autoplay muted loop playsinline class="video-index">
+                <source src="./img/Fondoindex.mp4" type="video/mp4" />
+            </video>
+        </div>
+
+        <div class="contenido p-0 m-0">
+            <nav>…</nav>
+            <h1>Bienvenido a mi tienda de remeras oversize</h1>
+        </div>
+
+
+        <div id="carouselExampleIndicators" class="carousel slide position-relative carousel-index">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -109,7 +121,7 @@
 
 
     <!-- FOOTER DE INDEX -->
-    <footer class=" text-start pt-3 w-100">
+    <footer class=" text-start pt-3 w-100 footer-index">
 
         <div class="footer-conteiner-grid p-0 m-0">
             <div class="div1">
