--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <body>
 
-    <header class="index-header">
-        <div class="index-header-flex ">
+    <header class="index-header  ">
+        <div class="index-header-flex  ">
+            <nav class="navbar navbar-expand-lg fixed-top z-2 ">
 
-            <nav class="navbar navbar-expand-lg w-100 position-relative top-0 z-2">
-                <div class="container-fluid ">
+                <div class="container-fluid  ">
                     <a class="navbar-brand" href="index.html">KAZEOVER</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -34,52 +34,40 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                            </li>
-
                             <li class="nav-item">
                                 <a class="nav-link" href="./pages/hombre.html">Hombre</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./pages/mujer.html">Mujer</a>
                             </li>
-                            <ul class="navbar-nav mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./img/nav-icon-busqueda.png"> <i
-                                            class="bi bi-search fs-5"></i>
-                                    </a>
-                                </li>
-                            </ul>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/mujer.html">Acessorios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/mujer.html">Sobre nosotros</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </div>
-
-
-        </div>
-
-
     </header>
 
     <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
 
-    <main class="">
-        <div class="video-background">
-            <video autoplay muted loop playsinline class="video-index">
+    <main>
+        <!-- <div class="video-background">
+            <video  autoplay muted loop playsinline class="video-main">
                 <source src="./img/Fondoindex.mp4" type="video/mp4" />
             </video>
         </div>
 
         <div class="contenido p-0 m-0">
             <nav>…</nav>
-            <h1>Bienvenido a mi tienda de remeras oversize</h1>
-        </div>
+        </div> -->
 
 
-        <div id="carouselExampleIndicators" class="carousel slide position-relative carousel-index">
+        <div id="carouselExampleIndicators" class="carousel slide m-0 p-0">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -88,15 +76,16 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner">
+            <div class="carousel-inner ">
                 <div class="carousel-item active">
-                    <img src="./img/carrusel1index.jpg" class="carrusel-foto-index" alt="...">
+                    <a href="#"><img src="./img/carrusel1index.jpg" class="carrusel-img-index" alt=""> </a>
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carrusel2index.jpg" class="carrusel-foto-index" alt="...">
+                    <a href=""><img src="./img/carrusel2index.jpg" class="carrusel-img-index" alt="..."></a>
+
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carussel3index.jpg" class="carrusel-foto-index" alt="...">
+                    <img src="./img/carussel3index.jpg" class="carrusel-img-index" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -110,10 +99,47 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        
+        <div class=" div-index-main  my-4 ">
+
+            <div class="card border border-0 card-index-div" >
+                <img src="./img/card-oversize-index1.jpg" class="card-img-top  card-img-index" alt="...">
+
+                <div class="card-body ">
+                    <p class="card-text">"1Million People"</p>
+                </div>
+            </div>
+
+            <div class="card border border-0  card-index-div">
+                <img src="./img/card-oversize-index2.jpg" class="card-img-top  card-img-index" alt="...">
+
+                <div class="card-body">
+                    <p class="card-text">"Grounded Lifestyle"</p>
+                </div>
+            </div>
+
+            <div class="card  border border-0 card-index-div" >
+                <img src="./img/card-oversize-index3.jpg" class="card-img-top  card-img-index" alt="...">
+
+                <div class="card-body">
+                    <p class="card-text">"Ame la Nuit"</p>
+                </div>
+            </div>
+
+            <div class="card border border-0  card-index-div" >
+                <img src="./img/card-oversize-index4.jpg" class="card-img-top card-img-index" alt="...">
+
+                <div class="card-body">
+                    <p class="card-text">"This World"</p>
+                </div>
+            </div>
+
+        </div>
+
 
         <div class="d-flex justify-content-center">
-            <div class="w-50"><img src="./img/carrusel4index.jpg" alt="" class="carrusel-foto-index-main"></div>
-            <div class="w-50"><img src="./img/carrusel5index.jpg" alt="" class="carrusel-foto-index-main"></div>
+            <div class="w-50"><img src="./img/carrusel4index.jpg" alt="" class="carrusel-foto-index-main w-100"></div>
+            <div class="w-50"><img src="./img/carrusel5index.jpg" alt="" class="carrusel-foto-index-main w-100"></div>
         </div>
 
     </main>
@@ -121,33 +147,34 @@
 
 
     <!-- FOOTER DE INDEX -->
-    <footer class=" text-start pt-3 w-100 footer-index">
+    <footer class=" text-start w-100 footer-index">
 
-        <div class="footer-conteiner-grid p-0 m-0">
-            <div class="div1">
-                <ul class=" flex-column align-items-stretch w-100">
+        <div class="footer-conteiner-grid">
+            <div class="div1 py-5">
+                <ul class=" flex-column align-items-stretch w-100 ">
                     <li>Ayuda</li>
                     <li>Mi cuenta</li>
-                    <li>Store Locator</li>
-                    <li>Store Locator </li>
                     <li>Gift Card </li>
+                    <li>Productos</li>
+                    <li>Sobre nosotros</li>
                 </ul>
             </div>
         </div>
 
-        <div class="footer-redessociales m-0">
+        <div class="m-0 p-0">
             <div>
-                <div class="d-flex flex-column">
+                <div class="d-flex row ">
                     <ul class="d-flex">
                         <li>Copyright © UNIQLO Co., Ltd. All rights reserved.</li>
                     </ul>
-                    <div class="d-flex flex-column align-items-center justify-content-center">
-                        <ul class="d-flex  footer-ul flex-row align-items-center justify-content-center">
+                    <div class="w-100 ">
+                        <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
                             <li> <a href=""><img src="./img/logo faceboock.png" alt="FACEBOOCK"></a></li>
                             <li> <a href=""><img src="./img/Logo instagram.png" alt="Instagram"></a></li>
                             <li> <a href=""><img src="./img/youtube_social_icon_dark.png" alt=""></a></li>
                             <li> <a href=""> <img src="./img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
+
                         <p class="p-footer-derechos m-0 p-2 w-100">Todos los derechos reservados </p>
                     </div>
 
