--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -9,12 +9,14 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
-    <title>KAZEOVER</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <title>ACCESORIOS</title>
+    <link rel="stylesheet" href="../estilos/style.css">
 </head>
 
+
 <body>
-    <header class="hombres-header">
+    <!-- HEADER DE ACCESORIOS -->
+    <header class="accesorios-header">
         <div class="index-header-flex">
             <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0">
                 <div class="container-fluid ">
@@ -52,23 +54,23 @@
                         </ul>
 
                     </div>
+                </div>
             </nav>
     </header>
-
-    <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
+    <!-- MAIN DE MUJERES DONDE APARECEN NUESTRAS REMERAS -->
     <main class="index-main m-0 p-0 ">
-        <h2 class="nuestrasremeras-index-h2">MEN</h2>
+        <h2 class="nuestrasremeras-index-h2 ">WOMAN</h2>
 
         <div class=" row ultimos-oversize-contenedor"><!-- Contenedor de los productos -->
 
             <!-- PRIMERA CARD -->
-            <div class="col-6 col-md-3  p-0 m-0 rounded">
-                <div class="remeraindex w-100 ">
+            <div class="col-6 col-md-3  p-0 rounded">
+                <div class="remeraindex w-100">
                     <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="m-0 p-0">DRACULA</h3>
+                         <h3 class="m-0 p-0">DRACULA</h3>
                         <p class="m-0 p-0">OVERSIZE COMODIDA </p>
                         <p class="">$30</p>
                     </div>
@@ -76,13 +78,13 @@
             </div>
 
             <!-- SEGUNDA CARD -->
-            <div class="col-6 col-md-3  p-0 m-0 rounded ">
+            <div class="col-6 col-md-3  p-0 rounded ">
                 <div class="remeraindex w-100 h-100">
                     <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="m-0 p-0">DRACULA</h3>
+                          <h3 class="m-0 p-0">DRACULA</h3>
                         <p class="m-0 p-0">OVERSIZE COMODIDA </p>
                         <p class="">$30</p>
                     </div>
@@ -96,7 +98,7 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="m-0 p-0">DRACULA</h3>
+                         <h3 class="m-0 p-0">DRACULA</h3>
                         <p class="m-0 p-0">OVERSIZE COMODIDA </p>
                         <p class="">$30</p>
 
@@ -111,7 +113,7 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="m-0 p-0">DRACULA</h3>
+                          <h3 class="m-0 p-0">DRACULA</h3>
                         <p class="m-0 p-0">OVERSIZE COMODIDA </p>
                         <p class="">$30</p>
                     </div>
@@ -125,7 +127,7 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="m-0 p-0">DRACULA</h3>
+                         <h3 class="m-0 p-0">DRACULA</h3>
                         <p class="m-0 p-0">OVERSIZE COMODIDA </p>
                         <p class="">$30</p>
                     </div>
@@ -138,7 +140,7 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="m-0 p-0">DRACULA</h3>
+                          <h3 class="m-0 p-0">DRACULA</h3>
                         <p class="m-0 p-0">OVERSIZE COMODIDA </p>
                         <p class="">$30</p>
                     </div>
@@ -151,7 +153,7 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="m-0 p-0">DRACULA</h3>
+                         <h3 class="m-0 p-0">DRACULA</h3>
                         <p class="m-0 p-0">OVERSIZE COMODIDA </p>
                         <p class="">$30</p>
                     </div>
@@ -164,7 +166,7 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="m-0 p-0">DRACULA</h3>
+                          <h3 class="m-0 p-0">DRACULA</h3>
                         <p class="m-0 p-0">OVERSIZE COMODIDA </p>
                         <p class="">$30</p>
                     </div>
@@ -177,7 +179,7 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="m-0 p-0">DRACULA</h3>
+                          <h3 class="m-0 p-0">DRACULA</h3>
                         <p class="m-0 p-0">OVERSIZE COMODIDA </p>
                         <p class="">$30</p>
                     </div>
@@ -190,7 +192,7 @@
                             alt="remeranegra"></div>
 
                     <div class="productor-remera-descripcion m-3">
-                        <h3 class="m-0 p-0">DRACULA</h3>
+                          <h3 class="m-0 p-0">DRACULA</h3>
                         <p class="m-0 p-0">OVERSIZE COMODIDA </p>
                         <p class="">$30</p>
                     </div>
@@ -199,35 +201,34 @@
 
     </main>
 
+    <!-- FOOTER DE MUJER -->
+    <footer class=" text-start pt-3 w-100">
 
-    <footer class=" text-start w-100 footer-index">
-
-        <div class="footer-conteiner-grid">
-            <div class="div1 py-5">
-                <ul class=" flex-column align-items-stretch w-100 ">
+        <div class="footer-conteiner-grid p-0 m-0">
+            <div class="div1">
+                <ul class=" flex-column align-items-stretch w-100">
                     <li>Ayuda</li>
                     <li>Mi cuenta</li>
+                    <li>Store Locator</li>
+                    <li>Store Locator </li>
                     <li>Gift Card </li>
-                    <li>Productos</li>
-                    <li>Sobre nosotros</li>
                 </ul>
             </div>
         </div>
 
-        <div class="m-0 p-0">
+        <div class="footer-redessociales m-0">
             <div>
-                <div class="d-flex row ">
+                <div class="d-flex flex-column">
                     <ul class="d-flex">
                         <li>Copyright © UNIQLO Co., Ltd. All rights reserved.</li>
                     </ul>
-                    <div class="w-100 ">
-                        <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
-                            <li> <a href=""><img src="/img/logo faceboock.png" alt="FACEBOOCK"></a></li>
-                            <li> <a href=""><img src="/img/Logo instagram.png" alt="Instagram"></a></li>
-                            <li> <a href=""><img src="/img/youtube_social_icon_dark.png" alt=""></a></li>
-                            <li> <a href=""> <img src="/img/tiktok.png" alt="Tiktok"></a></li>
+                    <div class="d-flex flex-column align-items-center justify-content-center">
+                        <ul class="d-flex  footer-ul flex-row align-items-center justify-content-center">
+                            <li> <a href=""><img src="../img/logo faceboock.png" alt="FACEBOOCK"></a></li>
+                            <li> <a href=""><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
+                            <li> <a href=""><img src="../img/youtube_social_icon_dark.png" alt=""></a></li>
+                            <li> <a href=""> <img src="../img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
-
                         <p class="p-footer-derechos m-0 p-2 w-100">Todos los derechos reservados </p>
                     </div>
 
