--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -10,52 +10,46 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <title>KAZEOVER</title>
-    <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <!-- HEADER DE MUJER -->
-    <header class="index-header">
-        <div class="oscureser-fondo">
-            <div class="index-header-flex">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0">
-                    <div class="container-fluid ">
-                        <a class="navbar-brand" href="/index.html">KAZEOVER</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
+   <header class="mujer-header  ">
+        <div class="index-header-flex  ">
+            <nav class="navbar navbar-expand-lg fixed-top z-2 ">
 
-                            <div>
-                                <span class="navbar-toggler-icon"></span>
-                            </div>
-                        </button>
+                <div class="container-fluid  ">
+                    <a class="navbar-brand" href="index.html">KAZEOVER</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
 
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./hombre.html">Hombre</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./mujer.html">Mujer</a>
-                                </li>
-                                <ul class="navbar-nav mb-2 mb-lg-0">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="./img/nav-icon-busqueda.png"> <i
-                                                class="bi bi-search fs-5"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </ul>
-
+                        <div>
+                            <span class="navbar-toggler-icon"></span>
                         </div>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/hombre.html">Hombre</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/mujer.html">Mujer</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/mujer.html">Acessorios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/mujer.html">Sobre nosotros</a>
+                            </li>
+                        </ul>
                     </div>
-                </nav>
+                </div>
+            </nav>
+        </div>
     </header>
 
 <!-- MAIN DE MUJERES DONDE APARECEN NUESTRAS REMERAS -->
@@ -204,33 +198,34 @@
 
 
     <!-- FOOTER DE MUJER -->
-    <footer class=" text-start pt-3 w-100">
+    <footer class=" text-start w-100 footer-index">
 
-        <div class="footer-conteiner-grid p-0 m-0">
-            <div class="div1">
-                <ul class=" flex-column align-items-stretch w-100">
+        <div class="footer-conteiner-grid">
+            <div class="div1 py-5">
+                <ul class=" flex-column align-items-stretch w-100 ">
                     <li>Ayuda</li>
                     <li>Mi cuenta</li>
-                    <li>Store Locator</li>
-                    <li>Store Locator </li>
                     <li>Gift Card </li>
+                    <li>Productos</li>
+                    <li>Sobre nosotros</li>
                 </ul>
             </div>
         </div>
 
-        <div class="footer-redessociales m-0">
+        <div class="m-0 p-0">
             <div>
-                <div class="d-flex flex-column">
+                <div class="d-flex row ">
                     <ul class="d-flex">
                         <li>Copyright © UNIQLO Co., Ltd. All rights reserved.</li>
                     </ul>
-                    <div class="d-flex flex-column align-items-center justify-content-center">
-                        <ul class="d-flex  footer-ul flex-row align-items-center justify-content-center">
-                            <li> <a href=""><img src="../img/logo faceboock.png" alt="FACEBOOCK"></a></li>
-                            <li> <a href=""><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
-                            <li> <a href=""><img src="../img/youtube_social_icon_dark.png" alt=""></a></li>
-                            <li> <a href=""> <img src="../img/tiktok.png" alt="Tiktok"></a></li>
+                    <div class="w-100 ">
+                        <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
+                            <li> <a href=""><img src="/img/logo faceboock.png" alt="FACEBOOCK"></a></li>
+                            <li> <a href=""><img src="/img/Logo instagram.png" alt="Instagram"></a></li>
+                            <li> <a href=""><img src="/img/youtube_social_icon_dark.png" alt=""></a></li>
+                            <li> <a href=""> <img src="/img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
+
                         <p class="p-footer-derechos m-0 p-2 w-100">Todos los derechos reservados </p>
                     </div>
 
