--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -14,11 +14,12 @@
 </head>
 
 <body>
-    <header class="hombres-header">
-        <div class="index-header-flex">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0">
-                <div class="container-fluid ">
-                    <a class="navbar-brand" href="/index.html">KAZEOVER</a>
+  <header class="index-header  ">
+        <div class="index-header-flex  ">
+            <nav class="navbar navbar-expand-lg fixed-top z-2 ">
+
+                <div class="container-fluid  ">
+                    <a class="navbar-brand" href="index.html">KAZEOVER</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -31,28 +32,23 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="./hombre.html">Hombre</a>
+                                <a class="nav-link" href="../pages/hombre.html">Hombre</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./mujer.html">Mujer</a>
+                                <a class="nav-link" href="../pages/mujer.html">Mujer</a>
                             </li>
-                            <ul class="navbar-nav mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./img/nav-icon-busqueda.png"> <i
-                                            class="bi bi-search fs-5"></i>
-                                    </a>
-                                </li>
-                            </ul>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/mujer.html">Acessorios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/mujer.html">Sobre nosotros</a>
+                            </li>
                         </ul>
-
                     </div>
+                </div>
             </nav>
+        </div>
     </header>
 
     <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
