--- a/index.html
+++ b/index.html
@@ -56,19 +56,12 @@
     <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
 
     <main>
-        <!-- <div class="video-background">
-            <video  autoplay muted loop playsinline class="video-main">
-                <source src="./img/Fondoindex.mp4" type="video/mp4" />
-            </video>
-        </div>
-
-        <div class="contenido p-0 m-0">
-            <nav>…</nav>
-        </div> -->
-
-
-        <div id="carouselExampleIndicators" class="carousel slide m-0 p-0">
-            <div class="carousel-indicators">
+     <div class="div-fondo-index-background ">
+         <img src="./img/fondo-index-background.jpg" class="img-desktop" alt="Remera grande" />
+    </div>
+         
+        <div id="carouselExampleIndicators" class="carousel slide m-0 p-0 carousel-index">
+            <div class="carousel-indicators ">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
@@ -76,7 +69,7 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner ">
+            <div class="carousel-inner mt-5">
                 <div class="carousel-item active">
                     <a href="#"><img src="./img/carrusel1index.jpg" class="carrusel-img-index" alt=""> </a>
                 </div>
@@ -99,10 +92,10 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        
+
         <div class=" div-index-main  my-4 ">
 
-            <div class="card border border-0 card-index-div" >
+            <div class="card border border-0 card-index-div">
                 <img src="./img/card-oversize-index1.jpg" class="card-img-top  card-img-index" alt="...">
 
                 <div class="card-body ">
@@ -111,14 +104,14 @@
             </div>
 
             <div class="card border border-0  card-index-div">
-                <img src="./img/card-oversize-index2.jpg" class="card-img-top  card-img-index" alt="...">
+                <img src="./img/card-oversize-index6.jpg" class="card-img-top  card-img-index" alt="...">
 
                 <div class="card-body">
-                    <p class="card-text">"Grounded Lifestyle"</p>
+                    <p class="card-text">"New york Yankees"</p>
                 </div>
             </div>
 
-            <div class="card  border border-0 card-index-div" >
+            <div class="card  border border-0 card-index-div">
                 <img src="./img/card-oversize-index3.jpg" class="card-img-top  card-img-index" alt="...">
 
                 <div class="card-body">
@@ -126,7 +119,7 @@
                 </div>
             </div>
 
-            <div class="card border border-0  card-index-div" >
+            <div class="card border border-0  card-index-div">
                 <img src="./img/card-oversize-index4.jpg" class="card-img-top card-img-index" alt="...">
 
                 <div class="card-body">
@@ -137,8 +130,8 @@
         </div>
 
 
-        <div class="d-flex justify-content-center">
-            <div class="w-50"><img src="./img/carrusel4index.jpg" alt="" class="carrusel-foto-index-main w-100"></div>
+        <div class="d-flex justify-content-center vh-80  ">
+            <div class="w-50 "><img src="./img/carrusel4index.jpg" alt="" class="carrusel-foto-index-main w-100"></div>
             <div class="w-50"><img src="./img/carrusel5index.jpg" alt="" class="carrusel-foto-index-main w-100"></div>
         </div>
 
@@ -149,7 +142,7 @@
     <!-- FOOTER DE INDEX -->
     <footer class=" text-start w-100 footer-index">
 
-        <div class="footer-conteiner-grid">
+        <div class="footer-conteiner-grid ">
             <div class="div1 py-5">
                 <ul class=" flex-column align-items-stretch w-100 ">
                     <li>Ayuda</li>
