--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                                 <a class="nav-link" href="./pages/mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/mujer.html">Acessorios</a>
+                                <a class="nav-link" href="./pages/accesorios.html">Acessorios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/mujer.html">Sobre nosotros</a>
+                                <a class="nav-link" href="./pages/sobrenosotros.html">Sobre nosotros</a>
                             </li>
                         </ul>
                     </div>
@@ -122,7 +122,7 @@
             <div class="card border border-0  card-index-div">
                 <img src="./img/card-oversize-index4.jpg" class="card-img-top card-img-index" alt="...">
 
-                <div class="card-body">
+                <div class="card-body ">
                     <p class="card-text">"This World"</p>
                 </div>
             </div>
@@ -162,10 +162,10 @@
                     </ul>
                     <div class="w-100 ">
                         <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
-                            <li> <a href=""><img src="./img/logo faceboock.png" alt="FACEBOOCK"></a></li>
-                            <li> <a href=""><img src="./img/Logo instagram.png" alt="Instagram"></a></li>
-                            <li> <a href=""><img src="./img/youtube_social_icon_dark.png" alt=""></a></li>
-                            <li> <a href=""> <img src="./img/tiktok.png" alt="Tiktok"></a></li>
+                            <li> <a href="#"><img src="./img/logo faceboock.png" alt="FACEBOOCK"></a></li>
+                            <li> <a href="#"><img src="./img/Logo instagram.png" alt="Instagram"></a></li>
+                            <li> <a href="#"><img src="./img/youtube_social_icon_dark.png" alt=""></a></li>
+                            <li> <a href="#"><img src="./img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
 
                         <p class="p-footer-derechos m-0 p-2 w-100">Todos los derechos reservados </p>
