--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -20,7 +20,7 @@
             <nav class="navbar navbar-expand-lg fixed-top z-2 ">
 
                 <div class="container-fluid  ">
-                    <a class="navbar-brand" href="index.html">KAZEOVER</a>
+                    <a class="navbar-brand" href="/index.html">KAZEOVER</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -34,16 +34,16 @@
 
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/hombre.html">Hombre</a>
+                                <a class="nav-link" href="../pages/hombre.html">Hombre</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/mujer.html">Mujer</a>
+                                <a class="nav-link" href="../pages/mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/mujer.html">Acessorios</a>
+                                <a class="nav-link" href="../pages/accesorios.html">Acessorios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/mujer.html">Sobre nosotros</a>
+                                <a class="nav-link" href="../pages/sobrenosotros.html">Sobre nosotros</a>
                             </li>
                         </ul>
                     </div>
