--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -19,7 +19,7 @@
             <nav class="navbar navbar-expand-lg fixed-top z-2 ">
 
                 <div class="container-fluid  ">
-                    <a class="navbar-brand" href="index.html">KAZEOVER</a>
+                    <a class="navbar-brand" href="/index.html">KAZEOVER</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -39,10 +39,10 @@
                                 <a class="nav-link" href="../pages/mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/mujer.html">Acessorios</a>
+                                <a class="nav-link" href="../pages/accesorios.html">Acessorios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/mujer.html">Sobre nosotros</a>
+                                <a class="nav-link" href="../pages/sobrenosotros.html">Sobre nosotros</a>
                             </li>
                         </ul>
                     </div>
@@ -52,8 +52,8 @@
     </header>
 
     <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
-    <main class="index-main m-0 p-0 ">
-        <h2 class="nuestrasremeras-index-h2">MEN</h2>
+    <main class="index-main ">
+        <h2 class="nuestrasremeras-men-h2 mt-5">MEN</h2>
 
         <div class=" row ultimos-oversize-contenedor"><!-- Contenedor de los productos -->
 
@@ -196,9 +196,9 @@
     </main>
 
 
-    <footer class=" text-start w-100 footer-index">
+   <footer class=" text-start w-100 footer-index">
 
-        <div class="footer-conteiner-grid">
+        <div class="footer-conteiner-grid ">
             <div class="div1 py-5">
                 <ul class=" flex-column align-items-stretch w-100 ">
                     <li>Ayuda</li>
@@ -218,10 +218,10 @@
                     </ul>
                     <div class="w-100 ">
                         <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
-                            <li> <a href=""><img src="/img/logo faceboock.png" alt="FACEBOOCK"></a></li>
-                            <li> <a href=""><img src="/img/Logo instagram.png" alt="Instagram"></a></li>
-                            <li> <a href=""><img src="/img/youtube_social_icon_dark.png" alt=""></a></li>
-                            <li> <a href=""> <img src="/img/tiktok.png" alt="Tiktok"></a></li>
+                            <li> <a href="#"><img src="../img/logo faceboock.png" alt="FACEBOOCK"></a></li>
+                            <li> <a href="#"><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
+                            <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt=""></a></li>
+                            <li> <a href="#"><img src="../img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
 
                         <p class="p-footer-derechos m-0 p-2 w-100">Todos los derechos reservados </p>
@@ -234,6 +234,7 @@
         </div>
 
     </footer>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
