--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -71,7 +71,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">World Vision </h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="/img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
