--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -71,7 +71,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">World Vision </h3>
                         <div class="position-relative ">
-                            <img src="/img/corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -89,7 +89,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Ame la Nuit</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -107,7 +107,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Blessed Angel</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -125,7 +125,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Tokyo Forest</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -141,7 +141,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">New York Yankees</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -157,7 +157,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Grow the Game</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -174,7 +174,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Wise Moves</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -190,7 +190,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">1Million People</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -206,7 +206,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">World Vision </h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -223,25 +223,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">World Vision </h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
-                        </div>
-
-                    </div>
-                    <p><span>$ 30</span></p>
-                </div>
-            </div>
-
-
-            <div class="w-50 img-card p-1">
-                <div>
-                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
-                </div>
-
-                <div class="card-info m-3">
-                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
-                        <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -259,7 +241,25 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">World Vision </h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
+
+                    </div>
+                    <p><span>$ 30</span></p>
+                </div>
+            </div>
+
+
+            <div class="w-50 img-card p-1">
+                <div>
+                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                </div>
+
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">World Vision </h3>
+                        <div class="position-relative ">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
