--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -294,10 +294,10 @@
                     </ul>
                     <div class="w-100 ">
                         <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
-                            <li> <a href="#"><img src="../img/logo faceboock.png" alt="FACEBOOCK"></a></li>
-                            <li> <a href="#"><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
+                            <li> <a href="#"><img src="../img/logo faceboock.png" alt="faceboock"></a></li>
+                            <li> <a href="#"><img src="../img/Logo instagram.png" alt="instagram"></a></li>
                             <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt=""></a></li>
-                            <li> <a href="#"><img src="../img/tiktok.png" alt="Tiktok"></a></li>
+                            <li> <a href="#"><img src="../img/tiktok.png" alt="tiktok"></a></li>
                         </ul>
 
                         <p class="p-footer-derechos m-0 p-2 w-100">Todos los derechos reservados </p>
