--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -54,7 +54,7 @@
 
     <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
     <main>
-        <h2 class=" nuestrasremeras-men-h2 pt-5 ms-5 text-start">VER TODO</h2>
+        <h2 class=" nuestrasremeras-men-h2 pt-5 ms-5 text-start">HOMBRES</h2>
 
 
         <!-- Contenedor de los productos -->
@@ -216,7 +216,7 @@
 
             <div class="w-50 img-card p-1">
                 <div>
-                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
                 </div>
 
                 <div class="card-info m-3">
@@ -234,7 +234,7 @@
 
             <div class="w-50 img-card p-1">
                 <div>
-                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
                 </div>
 
                 <div class="card-info m-3">
@@ -252,7 +252,7 @@
 
             <div class="w-50 img-card p-1">
                 <div>
-                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
                 </div>
 
                 <div class="card-info m-3">
