--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -54,11 +54,11 @@
 
 <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
     <main>
-        <h2 class=" nuestrasremeras-men-h2 pt-5 ms-5 text-start">VER TODO</h2>
+        <h2 class=" nuestrasremeras-men-h2 pt-5 ms-5 text-start">MUJER</h2>
 
 
         <!-- Contenedor de los productos -->
-        <div class="d-flex contenedor-men flex-wrap align-items-center h-100">
+        <div class="d-flex contenedor-men flex-wrap h-100">
 
             <!-- PRIMERA CARD -->
 
@@ -199,7 +199,7 @@
             </div>
             <div class="w-50 img-card p-1">
                 <div>
-                    <img class=" card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
                 </div>
 
                 <div class="card-info m-3">
@@ -216,25 +216,7 @@
 
             <div class="w-50 img-card p-1">
                 <div>
-                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
-                </div>
-
-                <div class="card-info m-3">
-                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
-                        <div class="position-relative ">
-                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
-                        </div>
-
-                    </div>
-                    <p><span>$ 30</span></p>
-                </div>
-            </div>
-
-
-            <div class="w-50 img-card p-1">
-                <div>
-                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
                 </div>
 
                 <div class="card-info m-3">
@@ -252,7 +234,25 @@
 
             <div class="w-50 img-card p-1">
                 <div>
-                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                </div>
+
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">World Vision </h3>
+                        <div class="position-relative ">
+                            <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
+                        </div>
+
+                    </div>
+                    <p><span>$ 30</span></p>
+                </div>
+            </div>
+
+
+            <div class="w-50 img-card p-1">
+                <div>
+                    <img class="card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
                 </div>
 
                 <div class="card-info m-3">
